# adf-pipeline-data-extractor

./: .gitignore  activities.json  example.env  fetch_adf_data.ipynb  main.py  metadata.json  pipeline.json  pyproject.toml
